--- a/crear_reserva.html
+++ b/crear_reserva.html
@@ -1,6 +1,9 @@
 <h1> Crear Reserva</h1>
 <br>
-<label for="dni" >DNI</label> <input type="text" name= 'dni' onchange="habilitarDesdeHasta()">
+<select name="" id="">
+    <option value="">DNI</option>
+    <option value="">PASAPORTE</option>
+</select> <input type="text" name= 'dni' onchange="habilitarDesdeHasta()">
 <br>
 <label for="desde" >desde</label><input type="date" id="desde" name="desde" id="" disabled>
 <br>
