Modificación y suma de hoja de estilo
Modifiqué el index.html sumando campos de login, link para registrarse y un poco de color, con dirección a crear_reserva.html donde acomodé un poquito y sume color.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-<a href="crear_reserva.html">crear reserva</a>
+<!DOCTYPE html>
+	<html>
+		<head>
+			<title>Ejercicios TC´s</title>
+      <link rel="stylesheet" type="text/css" href="index.css">
+		</head>
+			<body id="cuerpo">
+				<h1 id="titulo">Ejercicios de Testing</h1>
+          <div id="divGeneral"> 
+          					<h2 id="subtitulo">Iniciar sesión</h2>
+
+          						<form action="crear_reserva.html" class="form-horizontal" id="div1" method="POST">
+            							<div class="form-group">
+            							  <label for="inputEmail3" class="col-sm-2 control-label">E-mail</label>
+            							  <div class="col-sm-10">
+            							    <input type="email" class="form-control" id="inputEmail3" placeholder="Ingresar Correo" required="required">
+            							  </div>
+            							</div>
+
+            						<br>
+
+            							<div class="form-group" id="div2">
+            							  <label for="inputPassword3" class="col-sm-2 control-label">Contraseña</label>
+            							  <div class="col-sm-10">
+            							    <input type="password" class="form-control" id="inputPassword3"	placeholder="Ingresar Contraseña" required="required">
+            							  </div>
+            							</div>
+
+            						<br>
+
+            							<div class="form-group" id="div3">
+            							  <div class="col-sm-offset-2 col-sm-10">
+            							    <div class="checkbox">
+            							      <label>
+            							        <input type="checkbox" id="box"> Recordarme
+            							      </label>
+            							    </div>
+            							  </div>
+            							</div>
+
+            						<br>
+
+            							<div class="form-group" id="div4">
+            							  <div class="col-sm-offset-2 col-sm-10">
+            							  <button type="submit" class="btn btn-default" id="ingresar">Iniciar sesión</button>
+            							  </div>
+            							</div>
+          						</form>
+
+          						<h4>Si no estás registrado, podés hacerlo haciendo click aquí  <a href="registrarse">Registrarse</a></h4>
+          </div>
+			</body>
+</html>
