--- a/crear_reserva.html
+++ b/crear_reserva.html
@@ -1,40 +1,64 @@
-<h1> Crear Reserva</h1>
-<br>
-<select name="" id="">
-    <option value="">DNI</option>
-    <option value="">PASAPORTE</option>
-</select> <input type="text" name= 'dni' onchange="habilitarDesdeHasta()">
-<br>
-<label for="desde" >desde</label><input type="date" id="desde" name="desde" id="" disabled>
-<br>
-<label for="hasta">hasta</label><input onchange="habilitarHabitaciones()"  id="hasta" type="date" name="hasta" id="" disabled>
-<br>
-<div id="habitaciones" hidden>
-    <div><h1>habitación 1</h1>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" value="">
-                reservar habitación
-            </label>
-        </div>
-    </div>
-    <div><h1>habitación 2</h1>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" value="">
-                reservar habitación
-            </label>
-        </div>
-    </div>
-    <div><h1>habitación 3</h1>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" value="">
-                reservar habitación
-            </label>
-        </div>
-    </div>
-</div>
-<br>
-<button onclick="confirmar()"> confirmar reserva</button>
-<script src="crear_reserva.js"></script>
+<!DOCTYPE html>
+    <html>
+        <head>
+            <title>Crear reservas</title>
+            <link rel="stylesheet" type="text/css" href="index.css">
+        </head>
+            <body id="cuerpo">
+                <h1 id="titulo">Bienvenidos a Hotel CatuTesting</h1>
+                    <div id="divGeneral">  
+                        <h2 id="subtitulo"> Crear Reserva</h2>
+                        
+                        <div></div>
+                            <h4>Tipo de documentación</h4>
+                                <select name="" id="documentacion">
+                                    <option value="">DNI</option>
+                                    <option value="">PASAPORTE</option>
+                                </select> 
+                                <p>
+
+                            <input type="text" placeholder="Ingresar valor numérico" name= 'dni' onchange="habilitarDesdeHasta()" id="dni" required="numérico">
+
+
+                            <h4>Tiempo de reserva</h4>
+                            <label for="desde" >Desde</label>
+                            <input type="date" id="desde" name="desde" disabled>
+                            <p>
+                            
+                            <label for="hasta">Hasta</label>
+                            <input onchange="habilitarHabitaciones()"  id="hasta" type="date" name="hasta" disabled>
+                            <br>
+
+                                <div id="habitaciones" hidden>
+                                    <div>
+                                        <h1>Habitación 1</h1>
+                                            <div class="checkbox">
+                                                <label> 
+                                                    <input type="checkbox" value=""> Reservar habitación 
+                                                </label>
+                                            </div>
+                                    </div>
+                                    <div>
+                                        <h1>Habitación 2</h1>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox" value=""> Reservar habitación
+                                                </label>
+                                            </div>
+                                    </div>
+                                    <div>
+                                        <h1>Habitación 3</h1>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox" value=""> Reservar habitación
+                                                </label>
+                                            </div>
+                                    </div>
+                                </div>
+                                <br>
+
+                        <button onclick="confirmar()"> confirmar reserva</button>
+                        <script src="crear_reserva.js"></script>
+                    </div>
+             </body>
+</html>
