--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-	<html>
+  <html>
 		<head>
 			<title>Ejercicios TC´s</title>
       <link rel="stylesheet" type="text/css" href="index.css">
 		</head>
-			<body id="cuerpo">
-				<h1 id="titulo">Ejercicios de Testing</h1>
-          <div id="divGeneral"> 
-          					<h2 id="subtitulo">Iniciar sesión</h2>
+			<body class="cuerpo">
+				<h1 class="titulo">Ejercicios de Testing</h1>
+          <div class="divGeneral"> 
+          					<h2 class="subtitulo">Iniciar sesión</h2>
 
-          						<form action="crear_reserva.html" class="form-horizontal" id="div1" method="POST">
+          						<form action="crear_reserva.html" class="form-horizontal" class="div1" method="POST">
             							<div class="form-group">
-            							  <label for="inputEmail3" class="col-sm-2 control-label">E-mail</label>
+            							  <label for="inputEmail3" class="col-sm-2 control-label">Correo electrónico</label>
             							  <div class="col-sm-10">
             							    <input type="email" class="form-control" id="inputEmail3" placeholder="Ingresar Correo" required="required">
             							  </div>
@@ -19,7 +19,7 @@
 
             						<br>
 
-            							<div class="form-group" id="div2">
+            							<div class="form-group" class="div2">
             							  <label for="inputPassword3" class="col-sm-2 control-label">Contraseña</label>
             							  <div class="col-sm-10">
             							    <input type="password" class="form-control" id="inputPassword3"	placeholder="Ingresar Contraseña" required="required">
@@ -28,11 +28,11 @@
 
             						<br>
 
-            							<div class="form-group" id="div3">
+            							<div class="form-group" class="div3">
             							  <div class="col-sm-offset-2 col-sm-10">
             							    <div class="checkbox">
             							      <label>
-            							        <input type="checkbox" id="box"> Recordarme
+            							        <input type="checkbox" class="box"> Recordarme
             							      </label>
             							    </div>
             							  </div>
@@ -40,14 +40,14 @@
 
             						<br>
 
-            							<div class="form-group" id="div4">
+            							<div class="form-group" class="div4">
             							  <div class="col-sm-offset-2 col-sm-10">
-            							  <button type="submit" class="btn btn-default" id="ingresar">Iniciar sesión</button>
+            							  <button type="submit" class="btn-btn-default">Iniciar sesión</button>
             							  </div>
             							</div>
           						</form>
 
-          						<h4>Si no estás registrado, podés hacerlo haciendo click aquí  <a href="registrarse">Registrarse</a></h4>
+          						<h4>Si no estás registrado, podés hacerlo haciendo click aquí  <a href="registrarse.html">Registrarse</a></h4>
           </div>
 			</body>
 </html>
